# pulp-ci

./: .gitignore  .mention-bot  .travis.yml  AUTHORS  COPYRIGHT  README.md
.github/: pr_processor.py  send_email.py  settings.toml  spam_cleaner.py  supported_version.py
.github/workflows/: bugzilla_github.yml  bugzilla_redmine.yml  pr_processor.yml  spam_cleaner.yml  supported.yml
ci/: build-all.py  build.py  check-promotion-chain.py  docs-builder.py  github_bugzilla.py  promote-brach.py  promote-build.py  rebase_analysis.py  redmine_bugzilla.py  update-version-and-merge-forward.py  update-version.py
ci/ansible/: ansible.cfg  base_image_ci.yaml  pulp_2_tests.yaml  pulp_backup.yaml  pulp_build_box.yml  pulp_build_environment.yml  pulp_coverage.yaml  pulp_restore.yaml  pulp_server.yaml  pulp_server_upgrade.yaml  pulp_smash.yaml  pulp_smash_automation.yaml
ci/config/: aio_jslave_RHEL7-0.json  fc19.json  fc20.json  integration-rhel6.json  integration-rhel7.json  rhel5.json  rhel6.json  rhel7.json
ci/deploy/: deploy-environment.py  run-integration-tests.py  update-images.py
ci/docs/: all_content_index.rst  all_content_index_pulp3.rst  layout.html  plugin_index.rst  pulp_index.rst  pulp_index_2_8.rst  pulp_index_pulp3.rst  testrubyserver.rb
ci/jjb/: README.md  jenkins_jobs.ini  template.yaml
ci/jobs/: README.md  build-automation.yaml  ci-build-images.yaml  ci-build-repo.yaml  docs.yaml  (+26 more)
dockerfiles/: README.md  docker-quickstart.rst  registry-admin.py  registry_admin.py
pj/: .gitignore  Makefile  pj.py  pyproject.toml
pj/src/: pj.py
pj/src/pj/: __init__.py
(+300 files in other folders)
